--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,27 +30,27 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.barbecue-1.5-beta1.jar=../Libs/barbecue-1.5-beta1.jar
-file.reference.commons-beanutils-1.9.2.jar=../Libs/commons-beanutils-1.9.2.jar
-file.reference.commons-collections-2.1.jar=../Libs/commons-collections-2.1.jar
-file.reference.commons-collections-3.2.1.jar=../Libs/commons-collections-3.2.1.jar
-file.reference.commons-collections.jar=../Libs/commons-collections.jar
-file.reference.commons-digester-2.1.jar=../Libs/commons-digester-2.1.jar
-file.reference.commons-digester3-3.2.jar=../Libs/commons-digester3-3.2.jar
-file.reference.commons-javaflow-1590792.jar=../Libs/commons-javaflow-1590792.jar
-file.reference.commons-javaflow-20060411.jar=../Libs/commons-javaflow-20060411.jar
-file.reference.commons-logging-1.2.jar=../Libs/commons-logging-1.2.jar
-file.reference.iText-2.1.7.js2.jar=../Libs/iText-2.1.7.js2.jar
-file.reference.jasperreports-5.6.1.jar=../Libs/jasperreports-5.6.1.jar
-file.reference.jcommon-1.0.23.jar=../Libs/jcommon-1.0.23.jar
-file.reference.jdom.jar=../Libs/jdom.jar
-file.reference.jfreechart-1.0.19.jar=../Libs/jfreechart-1.0.19.jar
+file.reference.barbecue-1.5-beta1.jar=Librerias/barbecue-1.5-beta1.jar
+file.reference.commons-beanutils-1.9.2.jar=Librerias/commons-beanutils-1.9.2.jar
+file.reference.commons-collections-2.1.jar=Librerias/commons-collections-2.1.jar
+file.reference.commons-collections-3.2.1.jar=Librerias/commons-collections-3.2.1.jar
+file.reference.commons-collections.jar=Librerias/commons-collections.jar
+file.reference.commons-digester-2.1.jar=Librerias/commons-digester-2.1.jar
+file.reference.commons-digester3-3.2.jar=Librerias/commons-digester3-3.2.jar
+file.reference.commons-javaflow-1590792.jar=Librerias/commons-javaflow-1590792.jar
+file.reference.commons-javaflow-20060411.jar=Librerias/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.2.jar=Librerias/commons-logging-1.2.jar
+file.reference.iText-2.1.7.js2.jar=Librerias/iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.1.jar=Librerias/jasperreports-5.6.1.jar
+file.reference.jcommon-1.0.23.jar=Librerias/jcommon-1.0.23.jar
+file.reference.jdom.jar=Librerias/jdom.jar
+file.reference.jfreechart-1.0.19.jar=Librerias/jfreechart-1.0.19.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
